...
                android:layout_height="match_parent">

    <include layout="@layout/top_bar"
        android:id="@+id/intro_tools_top_bar"/>

    <LinearLayout
        android:id="@+id/intro_tools_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pocketpaint_main_bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <include layout="@layout/bottom_bar"/>
...
            android:layout_marginTop="15dp"
            android:background="@drawable/pocketpaint_checkeredbg_repeat"
            android:orientation="horizontal"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/intro_tools_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d20097a7"
        android:paddingEnd="@dimen/pocketpaint_welcome_margin_side"
        android:paddingStart="@dimen/pocketpaint_welcome_margin_side"
        android:paddingTop="@dimen/pocketpaint_welcome_margin_top"
...
