...
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/top_bar"
        android:id="@+id/intro_possibilites_topbar"/>

    <LinearLayout
        android:id="@+id/intro_possibilities_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pocketpaint_main_bottom_bar_height"
        android:layout_alignParentBottom="true"
...
            android:layout_marginTop="15dp"
            android:background="@drawable/pocketpaint_checkeredbg_repeat"
            android:orientation="horizontal"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/intro_possibilities_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:background="#d20097a7"
        android:gravity="top"
        android:orientation="vertical"
...
