...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/layer_side_nav_button_add"
        style="?borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/layer_new"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/layer_new_button_selector"
        android:theme="@style/HighlightColorTheme" />

    <ImageButton
        android:id="@+id/layer_side_nav_button_delete"
        style="?borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/layer_side_nav_button_add"
        android:contentDescription="@string/layer_delete"
        android:padding="0dp"
...
