...
                android:layout_marginTop="12dip"
                android:src="@drawable/ic_pocketpaint_color_palette"
                app:tint="@android:color/white" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/btn_top_layers"
            style="?actionButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_pocketpaint_layers"/>
    </LinearLayout>
...
