...
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:background="@color/navigationDrawerBackground">
    </android.support.design.widget.NavigationView>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view_layer"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center">

        <include layout="@layout/layout_main_menu_layer" />
    </android.support.design.widget.NavigationView>
...
