<?xml version="1.0" encoding="utf-8"?>
<!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2015 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lang_text"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:gravity="center_vertical|start"
    android:paddingEnd="@dimen/pocketpaint_multilingual_text_margin"
    android:paddingStart="@dimen/pocketpaint_multilingual_text_margin"
    android:textColor="@android:color/white"
    android:textSize="@dimen/pocketpaint_multilingual_name_text"
    tools:text="@string/device_language" />
