...
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <Spinner
                android:id="@+id/text_tool_dialog_spinner_font"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.2"/>

            <ToggleButton
                android:id="@+id/text_tool_dialog_toggle_underlined"
...
