...
            android:theme="@style/PocketPaintHighlightColorTheme"
            android:tint="@android:color/white" />

        <ImageButton
            style="?borderlessButtonStyle"
            android:contentDescription="@string/layer_new"
            android:id="@+id/pocketpaint_layer_side_nav_button_add"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pocketpaint_layer_side_nav_button_visibility"
            android:layout_width="50dp"
            android:padding="5dp"
            android:background="@color/pocketpaint_colorPrimary"
            android:scaleType="fitXY"
...
            android:theme="@style/PocketPaintHighlightColorTheme"
            android:tint="@android:color/white" />

        <ImageButton
            style="?borderlessButtonStyle"
            android:contentDescription="@string/layer_delete"
            android:id="@+id/pocketpaint_layer_side_nav_button_delete"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pocketpaint_layer_side_nav_button_add"
            android:layout_width="50dp"
            android:padding="5dp"
            android:background="@color/pocketpaint_colorPrimary"
            android:scaleType="fitXY"
...
