...
            android:layout_marginEnd="8dp"
            android:layoutDirection="ltr"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/pocketpaint_stroke_ibtn_circle"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                app:chipIcon="@drawable/ic_pocketpaint_tool_circle" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pocketpaint_stroke_ibtn_rect"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/ic_pocketpaint_tool_square" />

        </com.google.android.material.chip.ChipGroup>
...
